# EduNexora_OpenEnv

./: app.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
static/: style.css
templates/: index.html
uploads/: student.csv  sysllbus.txt
