[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edunexora-ai"
version = "0.1.0"
description = "RL Environment for Student Analytics"
dependencies = [
    "flask",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
